<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/event_details_image_id"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@color/cardview_dark_background"
            android:contentDescription="@string/image_desc"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_details_image_id"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/event_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_name"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp" />

        <TextView
            android:id="@+id/label_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_details_name"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/event_desc"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_details_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:layout_below="@id/label_desc"
            android:paddingLeft="12dp"
            android:paddingStart="12dp" />

        <TextView
            android:id="@+id/label_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_details_desc"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/event_city"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_details_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_city"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp" />

        <TextView
            android:id="@+id/label_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_details_city"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/event_country"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_details_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_country"
            android:paddingBottom="24dp"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp" />

    </RelativeLayout>
</ScrollView>
